# tauri-fable-elmish

./: README.md  index.html  package.json  paket.dependencies  pnpm-lock.yaml
.config/: dotnet-tools.json
src/: App.fs  Src.fsproj  paket.references  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/elmish/: Core.fs  Hooks.fs  Store.fs  UseSyncExternalStore.fs
